Fix spacing on hands

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,11 +1,20 @@
 .hands1{
-  float: left;
-  top: 0;
+  top: 8%;
   margin-top: -100px;
   left: 0;
+  position: fixed;
+  width: 220px;
 }
+
 .hands2{
-  float: right;
-  top: 0;
+  top: 8%;
+  right: 0;
   margin-top: -100px;
+  position: fixed;
+  width: 220px;
+}
+
+.board{
+  position: fixed;
+  left: 25%;
 }
